tests/NormalTests/paczka1/fuzzy1/19601318.err
Error in line 2: 5WK S84 532,3
Error in line 14: VGSiK A346 31,1
Error in line 6: 5WK A346 25,7
Error in line 17: paUuZOnMBRD A793 59,5
